Ajout recent tracks sur le Home + switch entre musiques
Signed-off-by: Clément Piovesan <cpiovesan@clements-macbook-pro.home>

--- a/src/scss/Home.scss
+++ b/src/scss/Home.scss
@@ -45,6 +45,7 @@
             background-color: #00264a;
             border-color: #000c17;
             margin-right: 3vw;
+            cursor: pointer;
             .ant-card-body {
                 .track-album {
                     height: 13vh;
